--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
         "easycorp/easyadmin-bundle": "^4.24",
         "phpdocumentor/reflection-docblock": "^5.6",
         "phpstan/phpdoc-parser": "^2.1",
+        "symfony/apache-pack": "*",
         "symfony/asset": "7.2.*",
         "symfony/console": "7.2.*",
         "symfony/doctrine-messenger": "7.2.*",
